refactoring after webinar